--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 
         <section id="main-content">
             <div class="left-box">
-                <h4>About Us</h4>
+                <h4>About Us.</h4>
             </div>
 
             <div class="right-box">
                 <h2>We grow businesses by creating experiences people love.</h2>
+
                 <p>Today, people embrace companies with the customer experiences that best meet their needs. Huge transforms
                     companies by designing these best-in-class experiences, driven by strong creative and rooted in the technology,
                     data, and organizational strategy required for operational excellence. We combine these capabilities
