Add video to code.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </section>
 
         <section id="video">
+            <video src="media/huge-inc-video.mp4"></video>
 
 
         </section>
