Made video more responsive.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             </div>
 
             <div class="right-box">
-                <h2>We grow businesses by creating experiences people love.</h2>
+                <div class="h2-section">
+                    <h2>We grow businesses by creating experiences people love.</h2>
+
+                </div>
 
                 <p>Today, people embrace companies with the customer experiences that best meet their needs. Huge transforms
                     companies by designing these best-in-class experiences, driven by strong creative and rooted in the technology,
