--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:800,900" rel="stylesheet">
+
     <title>Huge Inc. - Home</title>
 </head>
 
@@ -70,7 +72,7 @@
             </div>
 
             <div class="venn-diagram">
-                Filler. 
+                <img src="img/huge-diagram.png">
             </div>
 
         </section>
