Adjusting columns/flex

--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
             </div>
 
             <div class="venn-diagram">
-                <img src="img/huge-diagram.png">
+                <div class="image-container">
+                    <img src="img/huge-diagram.png">
+
+                </div>
             </div>
 
         </section>
