--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
         <main>
         <section class="section-about">
+            <!--
+                <div class="line"> 
+                </div> -->
                 <div class="section-about--left">
                     <h4 class="heading-quaternary">About Us.</h4>
                 </div>
