Played around more with flex and grids, got something to work

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <!--
                 <div class="line"> 
                 </div> -->
+                
                 <div class="section-about--left">
                     <h4 class="heading-quaternary">About Us.</h4>
                 </div>
@@ -58,14 +59,20 @@
         </section>
     
 
-<!-- 
         <section class="video">
-            <video src="media/huge-inc-video.mp4" autoplay poster="posterimage.jpg">
-            Sorry, your browser doesn't support embedded videos, 
-            but don't worry, you can <a href="media/huge-inc-video.mp4">download it</a>
-            and watch it with your favorite video player!
-            </video>
+            <div class="video-container">
+                <video class="video-container__content" autoplay loop muted>
+                    <source src="media/huge-inc-video.mp4" type="video/mp4">
+                    Sorry, your browser doesn't support embedded videos, but don't worry, you can
+                    <a href="media/huge-inc-video.mp4">download it</a>
+                    and watch it with your favorite video player!
+                </video>
+            </div>
+
         </section>
+
+<!-- 
+
 
     </div>
 
