Added another column

--- a/index.html
+++ b/index.html
@@ -71,6 +71,26 @@
 
         </section>
 
+        <section class="how">
+            <div class="how__content">
+                <h4>
+                    How we do it. 
+                </h4>
+                <h2 class="how__heading">
+                    The unified brand experience 
+                </h2>
+
+                <p class="how__content--paragraphs">
+                        Lean, interdisciplinary teams work in close collaboration with clients, helping them to solve their user’s biggest problems. Our user-centric, data-driven approach focuses on creating a seamless experience across all digital, physical and communications touchpoints. This unified brand experience results in a much more consistent, impactful, and valuable relationship with the user.
+                </p>
+
+            </div>
+
+            <div class="users">
+                <img src="img/huge-diagram.png" alt="Huge Inc. diagram" class="users__img">
+            </div>
+        </section>
+
 <!-- 
 
 
